# chemscreen-proto

./: .env.example  .gitignore  .pre-commit-config.yaml  .pymarkdownlnt.yml  ChemScreen.py  LICENSE  README.md  app.py  gemini-review.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  codeql-analysis.yml  pr-checks.yml
.streamlit/: config.toml
chemscreen/: __init__.py  analyzer.py  cache.py  cached_processors.py  config.py  errors.py  exporter.py  models.py  optimized_processor.py  processor.py  pubmed.py  session_manager.py
data/raw/: chemicals_with_errors.csv  demo_large.csv  demo_medium.csv  demo_small.csv  large_test_chemicals.csv  sample_chemicals.csv  simple_chemicals.csv
docs/: developer-testing-guide.md  librarian-testing-guide.md  local-installation-guide.md  performance-baseline-report.md  user-guide.md
pages/: 1_📤_Upload_Chemicals.py  2_🔍_Search.py  3_📊_Results.py  4_📥_Export.py  5_📜_History.py
shared/: __init__.py  app_utils.py  ui_utils.py
tests/: test_csv_processing.py  test_integration.py  test_performance_baseline.py
