[project]
name = "chemscreen-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pymarkdownlnt>=0.9.30",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
    "watchdog>=6.0.0",
]
