[project]
name = "chemscreen-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.45.1",
    "tenacity>=9.1.2",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pre-commit>=4.2.0",
    "pymarkdownlnt>=0.9.30",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "rich>=14.0.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
    "watchdog>=6.0.0",
]
