[project]
name = "chemscreen-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.45.1",
    "tenacity>=9.1.2",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pre-commit>=4.2.0",
    "pymarkdownlnt>=0.9.30",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "rich>=14.0.0",
    "ruff>=0.11.12",
    "mypy>=1.13.0",
    "types-aiofiles>=24.1.0.20241221",
    "types-openpyxl>=3.1.0",
    "watchdog>=6.0.0",
    "pandas-stubs>=2.2.3.250527",
    "psutil>=7.0.0",
    "types-psutil>=7.0.0.20250601",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[tool.ruff]
# Maintain compatibility with pre-commit
line-length = 88  # Default line length

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "diskcache.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmltodict.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
